# tiny-spec

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRACTS.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/commands/: eval-suite.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
agents/: spec-build-executor.md  spec-build-reviewer.md  tiny-spec-build-executor.md  tiny-spec-build-reviewer.md
docs/: sdd-evaluation-rubric.md
docs/eval/: README.md  planning-results.jsonl  results.jsonl  scores.jsonl
docs/eval/benchmark/brackets/: TICKET.md
docs/eval/benchmark/brackets/grade/: test.py
docs/eval/benchmark/duration/: TICKET.md
docs/eval/benchmark/duration/grade/: test.py
docs/eval/benchmark/rle/: TICKET.md
docs/eval/benchmark/rle/grade/: test.py
docs/eval/benchmark/roman/: TICKET.md
docs/eval/benchmark/wordfreq/: TICKET.md
docs/eval/harness/: grade_planning.py  run-planning.sh  run.sh  score.py  score_planning.py
docs/eval/planning/snip/: IDEA.md
docs/eval/planning/standup/: IDEA.md
spec-build/: SKILL.md
spec-build/templates/: memory.template.md
spec-create/: SKILL.md
spec-create/templates/: SPEC.template.md  conventions.template.md
spec-plan/: SKILL.md
spec-plan/templates/: PLAN.template.md
spec-tasks/: SKILL.md
spec-tasks/templates/: tasks.template.md
tiny-spec-breakdown/: SKILL.md
tiny-spec-breakdown/templates/: BREAKDOWN.template.md
tiny-spec-build/: SKILL.md
tiny-spec-build/templates/: memory.template.md
tiny-spec-create/: SKILL.md
tiny-spec-create/templates/: constitution.template.md
tiny-spec-plan/: SKILL.md
tiny-spec-plan/templates/: PLAN.template.md
tiny-spec-prd/: SKILL.md
tiny-spec-prd/templates/: PRD.template.md
tiny-spec-tasks/: SKILL.md
tiny_spec/: __init__.py  cli.py  manifest.json
(+2 files in other folders)
