[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tiny-spec"
version = "0.2.1"
description = "A tiny, opinionated take on spec-driven development."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["claude-code", "spec-driven-development", "ai-agents", "claude", "skills"]
authors = [{ name = "Snir Orlanczyk" }]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Environment :: Console",
]
# No runtime dependencies — the installer is stdlib only.
dependencies = []

[project.urls]
Homepage = "https://github.com/GrayMa77er/tiny-spec"
Source = "https://github.com/GrayMa77er/tiny-spec"
Issues = "https://github.com/GrayMa77er/tiny-spec/issues"

[project.scripts]
tiny-spec = "tiny_spec.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["tiny_spec"]

# The skills and agents live at the repo root (where the manual `cp` install
# expects them). Bundle them into the wheel under tiny_spec/_bundle/ so the
# installer can copy them at runtime, without restructuring the repo.
[tool.hatch.build.targets.wheel.force-include]
"tiny-spec-prd" = "tiny_spec/_bundle/tiny-spec-prd"
"tiny-spec-breakdown" = "tiny_spec/_bundle/tiny-spec-breakdown"
"tiny-spec-create" = "tiny_spec/_bundle/tiny-spec-create"
"tiny-spec-plan" = "tiny_spec/_bundle/tiny-spec-plan"
"tiny-spec-tasks" = "tiny_spec/_bundle/tiny-spec-tasks"
"tiny-spec-build" = "tiny_spec/_bundle/tiny-spec-build"
"agents" = "tiny_spec/_bundle/agents"

[tool.hatch.build.targets.sdist]
include = [
  "tiny_spec",
  "tiny-spec-prd",
  "tiny-spec-breakdown",
  "tiny-spec-create",
  "tiny-spec-plan",
  "tiny-spec-tasks",
  "tiny-spec-build",
  "agents",
  "README.md",
  "LICENSE",
]
